[project]
name = "mdm-backend"
version = "0.1.0"
description = "MDM Stewards Tool FastAPI Backend"
authors = [
    {name = "Abhishek , Shanmukha"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
